<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/touxiang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_img" />

            <TextView
                android:id="@+id/userName"
                style="@style/home_menu_tex_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="@color/red_anniu_bt_color" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/home_left_selector"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="24dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cebian_shouye" />

                    <TextView
                        style="@style/home_menu_tex_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cebian_shouye" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </FrameLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:id="@+id/order"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/home_left_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cebian_fujin" />

                    <TextView
                        style="@style/home_menu_tex_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cebian_fujin" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </FrameLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:id="@+id/safe"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/home_left_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cebian_shop" />

                    <TextView
                        style="@style/home_menu_tex_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cebian_shop" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </FrameLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:id="@+id/yunli"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/home_left_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cebian_youxi" />

                    <TextView
                        style="@style/home_menu_tex_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cebian_choujiang" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </FrameLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:id="@+id/xiaoji"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/home_left_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cebian_tuijian" />

                    <TextView
                        style="@style/home_menu_tex_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cebian_tuijian" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </FrameLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <LinearLayout
                    android:id="@+id/user"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/home_left_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cebian_guanyu" />

                    <TextView
                        style="@style/home_menu_tex_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cebian_about" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/right_jiantou" />
            </FrameLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="退出"
            android:textColor="@color/cebian_ziti_color"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>